--- a/style.css
+++ b/style.css
@@ -251,3 +251,10 @@ textarea {
   margin-top: 15px;
   border-radius: 15px;
 }
+
+.header-image {
+  display: block;
+  width: 300px;
+  max-width: 90%;
+  margin: 20px auto;
+}
